--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@adiwajshing/keyed-db": "^0.2.4",
     "@dark-yasiya/yt-dl.js": "1.0.5",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@xaviabot/fb-downloader": "latest",
     "@vitalets/google-translate-api": "^9.2.0",
     "@dark-yasiya/scrap":"1.0.1",    
     "pino": "^10.0.0",
