--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vitalets/google-translate-api": "^9.2.0",
     "@dark-yasiya/scrap":"1.0.1",    
     "pino": "^10.0.0",
+    "ruhend-scraper": "^8.3.0",
     "pm2": "^6.0.13",
     "util": "^0.12.4",
     "express": "latest",
