--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "qrcode-terminal": "^0.12.0",
     "yt-search": "2.11.1",
     "sequelize": "^6.37.5",
+    "ruhend-scraper": "^8.3.0",
     "sqlite3": "^5.1.7",
     "api-dylux": "1.8.5",
     "@mrnima/tiktok-downloader": "1.0.0",
