--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google/generative-ai": "^0.9.0",
     "@hapi/boom": "^10.0.1",
-    "@xaviabot/fb-downloader": "^1.0.14",
+    "@xaviabot/fb-downloader": "latest",
     "acrcloud": "^1.4.0",
     "api-dylux": "^1.8.3",
     "adm-zip": "^0.5.16",
