--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "proto": "^1.0.19",
     "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
+    "ruhend-scraper": "^8.3.0",
     "readline": "^1.3.0",
     "remove.bg": "^1.3.0",
     "stream": "^0.0.3",
