--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "author": "POPKID-XMD",
   "license": "ISC",
   "dependencies": {
-    "@whiskeysockets/baileys": "^v7.0.0-rc.9",
+    "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro@8.5.12",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google/generative-ai": "^0.9.0",
     "@hapi/boom": "^10.0.1",
-    "@xaviabot/fb-downloader": "latest",
+    "@xaviabot/fb-downloader": "^1.0.14",
     "acrcloud": "^1.4.0",
     "api-dylux": "^1.8.3",
     "adm-zip": "^0.5.16",
@@ -38,7 +38,7 @@
     "gifted-dls": "^1.3.0",
     "google-it": "^1.6.4",
     "human-readable": "^0.2.1",
-    "jimp": "^1.6.0",
+    "jimp": "^0.16.13",
     "jpeg-js": "^0.4.4",
     "jsqr": "^1.4.0",
     "libphonenumber": "^0.0.10",
@@ -55,7 +55,6 @@
     "proto": "^1.0.19",
     "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
-    "ruhend-scraper": "^8.3.0",
     "readline": "^1.3.0",
     "remove.bg": "^1.3.0",
     "stream": "^0.0.3",
