--- a/package.json
+++ b/package.json
@@ -63,6 +63,6 @@
     "url": "^0.11.4",
     "uuid": "^9.0.1",
     "wasitech": "npm:@distube/ytdl-core",
-    "yt-search": "^2.11.0"
+    "yt-search": "^2.12.1",
   }
   }
