--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro@8.5.12",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@ffmpeg/ffmpeg": "^0.12.15",
     "@google/generative-ai": "^0.9.0",
     "@hapi/boom": "^10.0.1",
     "@xaviabot/fb-downloader": "^1.0.14",
+    "@adiwajshing/keyed-db": "^0.2.4",
+    "@types/node": "^18.0.6",
     "acrcloud": "^1.4.0",
     "api-dylux": "^1.8.3",
     "adm-zip": "^0.5.16",
@@ -25,44 +28,77 @@
     "awesome-phonenumber": "^6.8.0",
     "axios": "^1.6.8",
     "chalk": "^5.3.0",
+    "cheerio": "^1.0.0-rc.12",
     "child_process": "^1.0.2",
+    "cookie": "^0.5.0",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "events": "^3.3.0",
     "ffmpeg": "^0.0.4",
     "file-type": "^19.0.0",
     "fluent-ffmpeg": "^2.1.3",
-    "megajs": "^1.1.0",
+    "form-data": "^4.0.1",
     "fs": "^0.0.1-security",
     "fs-extra": "^11.2.0",
     "gifted-dls": "^1.3.0",
     "google-it": "^1.6.4",
+    "gtts": "^0.2.1",
     "human-readable": "^0.2.1",
     "jimp": "^0.16.13",
     "jpeg-js": "^0.4.4",
+    "jsdom": "^22.1.0",
     "jsqr": "^1.4.0",
     "libphonenumber": "^0.0.10",
+    "libphonenumber-js": "^1.11.18",
+    "libsignal": "^2.0.1",
+    "link-preview-js": "^3.0.5",
+    "megajs": "^1.1.0",
     "moment-timezone": "^0.5.45",
+    "mumaker": "^2.0.0",
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
+    "node-id3": "^0.2.3",
     "node-os-utils": "^1.3.7",
     "node-webpmux": "^3.2.0",
+    "node-youtube-music": "^0.8.3",
     "os": "^0.1.2",
     "pdfkit": "^0.15.0",
+    "performance-now": "^2.1.0",
+    "phin": "^3.7.1",
     "pino": "^8.20.0",
     "pm2": "^5.4.0",
     "proto": "^1.0.19",
     "qrcode": "^1.5.3",
+    "qrcode-reader": "^1.0.4",
     "qrcode-terminal": "^0.12.0",
     "readline": "^1.3.0",
     "remove.bg": "^1.3.0",
+    "request": "^2.88.2",
+    "ruhend-scraper": "^8.3.0",
+    "safe-stable-stringify": "^2.5.0",
+    "set-cookie": "^0.0.4",
+    "sharp": "^0.32.6",
     "stream": "^0.0.3",
     "tesseract.js": "^5.1.0",
+    "tough-cookie": "^5.0.0",
     "translate-google-api": "^1.0.4",
     "url": "^0.11.4",
     "uuid": "^9.0.1",
     "wasitech": "npm:@distube/ytdl-core",
-    "yt-search": "^2.12.1",
+    "ws": "^8.17.1",
+    "yargs": "^17.6.0",
+    "yargs-parser": "^21.1.1",
+    "youtube-yts": "^2.0.0",
+    "youtubedl-core": "^4.11.7",
+    "yt-search": "^2.11.0",
+    "ytdl-core": "^4.11.5"
+  },
+  "overrides": {
+    "jimp": "^1.6.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
-  }
+}
