--- a/package.json
+++ b/package.json
@@ -62,7 +62,11 @@
     "translate-google-api": "^1.0.4",
     "url": "^0.11.4",
     "uuid": "^9.0.1",
-    "wasitech": "npm:@distube/ytdl-core",
+    "ws": "^8.17.1",
+    "yargs-parser": "^21.1.1",
+    "youtubedl-core": "^4.11.7",
+    "youtube-yts": "^2.0.0",
+    "ytdl-core": "^4.11.5"
     "yt-search": "^4.11.5"
   }
   }
