--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "node-fetch": "^3.3.2",
     "node-os-utils": "^1.3.7",
     "node-webpmux": "^3.2.0",
+    "node-youtube-music": "^0.8.3",
     "os": "^0.1.2",
     "pdfkit": "^0.15.0",
     "pino": "^8.20.0",
