--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@google/generative-ai": "^0.9.0",
     "@hapi/boom": "^10.0.1",
     "@xaviabot/fb-downloader": "^1.0.14",
+    "@adiwajshing/keyed-db": "^0.2.4",
     "acrcloud": "^1.4.0",
     "api-dylux": "^1.8.3",
     "adm-zip": "^0.5.16",
