--- a/package.json
+++ b/package.json
@@ -15,12 +15,9 @@
   "dependencies": {
     "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro@8.5.12",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "@hapi/boom": "^10.0.1",
-    "@types/node": "^18.0.6",
     "@google/generative-ai": "^0.9.0",
     "@hapi/boom": "^10.0.1",
     "@xaviabot/fb-downloader": "^1.0.14",
-    "@adiwajshing/keyed-db": "^0.2.4",
     "acrcloud": "^1.4.0",
     "api-dylux": "^1.8.3",
     "adm-zip": "^0.5.16",
@@ -51,7 +48,6 @@
     "node-fetch": "^3.3.2",
     "node-os-utils": "^1.3.7",
     "node-webpmux": "^3.2.0",
-    "node-youtube-music": "^0.8.3",
     "os": "^0.1.2",
     "pdfkit": "^0.15.0",
     "pino": "^8.20.0",
@@ -66,11 +62,7 @@
     "translate-google-api": "^1.0.4",
     "url": "^0.11.4",
     "uuid": "^9.0.1",
-    "ws": "^8.17.1",
-    "yargs-parser": "^21.1.1",
-    "youtubedl-core": "^4.11.7",
-    "youtube-yts": "^2.0.0",
-    "ytdl-core": "^4.11.5",
-    "yt-search": "^4.11.5"
+    "wasitech": "npm:@distube/ytdl-core",
+    "yt-search": "^2.11.0"
   }
   }
