--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "libphonenumber": "^0.0.10",
     "moment-timezone": "^0.5.45",
     "node-cache": "^5.1.2",
+    "node-youtube-music": "^0.8.3",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
     "node-os-utils": "^1.3.7",
@@ -62,7 +63,9 @@
     "translate-google-api": "^1.0.4",
     "url": "^0.11.4",
     "uuid": "^9.0.1",
-    "wasitech": "npm:@distube/ytdl-core",
-    "yt-search": "^2.11.0"
+    "ytdl-core": "^4.11.5",
+    "youtube-yts": "^2.0.0",
+    "youtubedl-core": "^4.11.7",
+    "yt-search": "^2.12.1"
   }
   }
