--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "POPKID-XMD",
   "license": "ISC",
   "dependencies": {
-    "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro@8.7.2",
+    "@whiskeysockets/baileys": "npm:baileys-elite@latest"
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google/generative-ai": "^0.9.0",
     "@hapi/boom": "^10.0.1",
