--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "POPKID-XMD",
   "license": "ISC",
   "dependencies": {
-    "@whiskeysockets/baileys": "npm:baileys-elite@latest"
+    "@whiskeysockets/baileys": "npm:gifted-baileys@latest",
+    "gifted-btns": "^1.0.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google/generative-ai": "^0.9.0",
     "@hapi/boom": "^10.0.1",
