--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "author": "POPKID-XMD",
   "license": "ISC",
   "dependencies": {
-    "@whiskeysockets/baileys": "npm:gifted-baileys@latest",
-    "gifted-btns": "^1.0.0",
+    "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro@8.5.12",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google/generative-ai": "^0.9.0",
     "@hapi/boom": "^10.0.1",
@@ -28,7 +27,7 @@
     "chalk": "^5.3.0",
     "child_process": "^1.0.2",
     "crypto": "^1.0.1",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "ffmpeg": "^0.0.4",
     "file-type": "^19.0.0",
