--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "POPKID-XMD",
   "license": "ISC",
   "dependencies": {
-    "@whiskeysockets/baileys": "github:xmd-tech/Baileys",
+    "@whiskeysockets/baileys": "npm:gifted-baileys@latest",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google/generative-ai": "^0.9.0",
     "@hapi/boom": "^10.0.1",
@@ -25,15 +25,11 @@
     "awesome-phonenumber": "^6.8.0",
     "axios": "^1.6.8",
     "chalk": "^5.3.0",
-    "child_process": "^1.0.2",
-    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "ffmpeg": "^0.0.4",
     "file-type": "^19.0.0",
     "fluent-ffmpeg": "^2.1.3",
     "megajs": "^1.1.0",
-    "fs": "^0.0.1-security",
     "fs-extra": "^11.2.0",
     "gifted-dls": "^1.3.0",
     "google-it": "^1.6.4",
@@ -41,7 +37,6 @@
     "jimp": "^0.16.13",
     "jpeg-js": "^0.4.4",
     "jsqr": "^1.4.0",
-    "libphonenumber": "^0.0.10",
     "moment-timezone": "^0.5.45",
     "node-cache": "^5.1.2",
     "node-youtube-music": "^0.8.3",
@@ -49,23 +44,18 @@
     "node-fetch": "^3.3.2",
     "node-os-utils": "^1.3.7",
     "node-webpmux": "^3.2.0",
-    "os": "^0.1.2",
     "pdfkit": "^0.15.0",
-    "pino": "^8.20.0",
+    "pino": "^9.4.0",
     "pm2": "^5.4.0",
-    "proto": "^1.0.19",
     "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
-    "readline": "^1.3.0",
     "remove.bg": "^1.3.0",
-    "stream": "^0.0.3",
     "tesseract.js": "^5.1.0",
     "translate-google-api": "^1.0.4",
-    "url": "^0.11.4",
     "uuid": "^9.0.1",
     "ytdl-core": "^4.11.5",
     "youtube-yts": "^2.0.0",
     "youtubedl-core": "^4.11.7",
     "yt-search": "^2.12.1"
   }
-  }
+}
